--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
-  <%= link_to image_tag(food.image),root_path, class: :card__img %>
+  <%= link_to image_tag(food.image),food_path(food.id), class: :card__img %>
   <div class="card__body">
-    <%= link_to food.title, root_path, class: :card__title%>
+    <%= link_to food.title, food_path(food.id), class: :card__title%>
     <p class="card__summary">
       <%= food.catch_copy %>
     </p>
