--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -29,23 +29,25 @@
         </div>
       </div>
       <div class="prototype__comments">
-        <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
-          <%# <%= form_with model: モデル名,local: true do |f|%>
-            <div class="field">
-              <%# <%= f.label :hoge, "コメント" %><br />
-              <%# <%= f.text_field :hoge, id:"comment_text" %>
-            </div>
-            <div class="actions">
-              <%# <%= f.submit "送信する", class: :form__btn  %>
-            </div>
-          <%# <% end %> 
-        <%# // ログインしているユーザーには上記を表示する %>
+          <% if current_user %>
+            <%= form_with(model: [@food, @comment], local: true) do |f|%>
+              <div class="field">
+                <%= f.label :text, "コメント" %><br />
+                <%= f.text_field :text, id:"comment_text" %>
+              </div>
+              <div class="actions">
+                <%= f.submit "送信する", class: :form__btn  %>
+              </div>
+            <% end %>
+          <% end %> 
         <ul class="comments_lists">
           <%# 投稿に紐づくコメントを一覧する処理を記述する %>
+          <% @comments.each do |comment| %>
             <li class="comments_list">
-              <%# <%= " コメントのテキスト "%>
-              <%# <%= link_to "（ ユーザー名 ）", root_path, class: :comment_user %>
+              <%= link_to comment.text%>
+              <%= link_to comment.user.name, root_path, class: :comment_user %>
             </li>
+          <% end %>
           <%# // 投稿に紐づくコメントを一覧する処理を記述する %>
         </ul>
       </div>
