--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -3,7 +3,7 @@
     <% if user_signed_in? %>
       <div class="greeting">
         <%= link_to "こんにちは、", class: :greeting__link %>
-        <%= link_to current_user.name, root_path, class: :greeting__link%>
+        <%= link_to current_user.name, user_path(current_user.id), class: :greeting__link%>
         <%= link_to "さん", class: :greeting__link%>
       </div>
     <% end %>
