--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,5 +1,13 @@
 <main class="main">
   <div class="inner">
+    <div class=memo>
+      <h3>
+        いつも夜ご飯を作って待っている主婦の皆さんお疲れ様です。
+        このサイトはいつも夜ご飯を作って待っている主婦の皆様が
+        若かった頃、よくご飯の感想を言ってもらっていたのに、最近
+        感想を言ってももらえなくて悩んでいる人達のサイトです。
+        気軽に投稿して、皆さんでシェアしましょう！！
+      </h3>
     <% if user_signed_in? %>
       <div class="greeting">
         <%= link_to "こんにちは、", class: :greeting__link %>
