--- a/app/views/foods/_food.html.erb
+++ b/app/views/foods/_food.html.erb
@@ -1,7 +1,8 @@
 <div class="card">
-  <%= link_to image_tag(food.image),food_path(food.id), class: :card__img %>
+  <%= link_to image_tag(food.image, size: '320x240'),food_path(food.id) %>
   <div class="card__body">
     <%= link_to food.title, food_path(food.id), class: :card__title%>
+    <%= food.created_at.strftime('%Y/%m/%d %H:%M') %>
     <p class="card__summary">
       <%= food.catch_copy %>
     </p>
