--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -22,7 +22,7 @@
           </p>
         </div>
         <div class="prototype__detail">
-          <p class="detail__title">コンセプト</p>
+          <p class="detail__title">レシピ</p>
           <p class="detail__message">
             <%= @food.menu %>
           </p>
