--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -166,6 +166,9 @@ a {
   text-align: right;
   text-decoration: underline;
 }
+.alert-danger{
+  color: red;
+}
 
 /* 詳細ページ */
 .prototype__wrapper{
@@ -241,9 +244,6 @@ a {
   text-decoration: underline;
 }
 
-.detail__message{
-  
-}
 
 /* ユーザーページ */
 .user__wrapper{
@@ -274,7 +274,13 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+}
+
+.icon_image {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
+  object-fit: cover;
 }
 /* フッター */
 
