--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: @food, local: true do |f|%>
+  <%= render 'shared/error_messages', model: f.object %>
   <div class="field">
     <%= f.label :title, "料理名" %><br />
     <%= f.text_field :title, id:"prototype_title" %>
