--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -2,19 +2,9 @@
   <div class="inner">
     <div class=memo>
       <h3>
-        いつも夜ご飯を作って待っている主婦の皆さんお疲れ様です。
-        このサイトはいつも夜ご飯を作って待っている主婦の皆様が
-        若かった頃、よくご飯の感想を言ってもらっていたのに、最近
-        感想を言ってももらえなくて悩んでいる人達のサイトです。
-        気軽に投稿して、皆さんでシェアしましょう！！
+        最新の投稿
       </h3>
-    <% if user_signed_in? %>
-      <div class="greeting">
-        <%= link_to "こんにちは、", class: :greeting__link %>
-        <%= link_to current_user.name, user_path(current_user.id), class: :greeting__link%>
-        <%= link_to "さん", class: :greeting__link%>
-      </div>
-    <% end %>
+    </div>
     <div class="card__wrapper">
       <%= render partial: 'food', collection: @foods %>
     </div>
