--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -38,7 +38,7 @@ a {
 
 .header {
   background-color: #eddcbc;
-  margin-bottom: 48px;
+  margin-bottom: 10px;
   padding: 20px 0;
 
 }
@@ -54,6 +54,7 @@ a {
 }
 .logo {
   width: 200px;
+  padding-left: 45px;
   text-decoration: none;
   color: black ;
 }
@@ -244,7 +245,10 @@ a {
   text-decoration: underline;
 }
 
-
+.memo{
+  text-align:center;
+  padding:20px 0;
+}
 /* ユーザーページ */
 .user__wrapper{
   min-height: calc(100vh - 161px);
