userテストコード

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
 
         <div class="field">
           <%= f.label :profile, "プロフィール" %><br />
-          <%= f.text_area :profile, class: :form__text, id:"user_profile" %>
+          <%= f.text_area :profile, class: :form__texts, id:"user_profile" %>
         </div>
 
 
