--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -11,8 +11,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :menu, "作り方" %><br />
-    <%= f.text_area :menu, class: :form__text, id:"prototype_concept" %>
+    <%= f.label :menu, "レシピ" %><br />
+    <%= f.text_area :menu, class: :form__texta, id:"prototype_concept" %>
   </div>
 
   <div class="field">
